# fall-detection

./: FILES_INDEX.md  IMPLEMENTATION_SUMMARY.md  INSTALL_RPI.md  QUICK_START.md  README.md  config.py  main.py  pyproject.toml  test_system.py  utils.py
